--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Environment variables
+# .env 
+
 # Logs
 logs
 *.log
@@ -64,11 +67,6 @@ web_modules/
 
 # Yarn Integrity file
 .yarn-integrity
-
-# dotenv environment variable files
-.env
-.env.*
-!.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
